--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.4
 colorama==0.4.4
 cryptography==3.4.8
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.2.7
 django-allauth==0.45.0
 django-cors-headers==3.8.0
@@ -12,9 +13,11 @@ django-filter==2.4.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
 drf-base64==2.0
+gunicorn==20.1.0
 idna==3.2
 Markdown==3.3.4
 oauthlib==3.1.1
+psycopg2-binary==2.9.3
 pycparser==2.20
 PyJWT==2.1.0
 python3-openid==3.2.0
