--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-allauth==0.45.0
 django-cors-headers==3.8.0
 django-filter==2.4.0
 django-rest-auth==0.9.5
+django-spa==0.3.6
 djangorestframework==3.12.4
 drf-base64==2.0
 gunicorn==20.1.0
